--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
 			<div class="clock" style="margin:2em;"></div>
 		</div>
 	</div>
-	<!--
-	<div class="row clearfix">
+<!--	<div class="row clearfix">
 		<div class="col-md-4 column">
 			<h2>
 				Tokyo
@@ -72,8 +71,7 @@
 			</h2>
 			<div class="small-clock clock-3" style="margin:2em;"></div>
 		</div>
-	</div>
-	//-->
+	</div>-->
 </div>
 <script src="js/flipclock.min.js"></script>
 <script type="text/javascript">
@@ -89,8 +87,7 @@
 			countdown: true,
 			language: language
 		});
-		/**
-		var clocks = [];
+/*		var clocks = [];
 		clocks.push($('.clock-1').FlipClock(diff, {
 			clockFace: 'DailyCounter',
 			countdown: true,
@@ -101,16 +98,26 @@
 			clockFace: 'DailyCounter',
 			countdown: true,
 			showSeconds: false,
-			language: 'de-de'
+			language: 'de'
 		}));
 		clocks.push($('.clock-3').FlipClock(diff, {
 			clockFace: 'DailyCounter',
 			countdown: true,
 			showSeconds: false,
 			language: 'en'
-		}));
-		 */
+		}));*/
 	});
+</script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4dfb324c2cb69efe" async="async"></script>
+<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	ga('create', 'UA-35680187-3', 'auto');
+	ga('set', 'anonymizeIp', true);
+	ga('send', 'pageview');
 </script>
 </body>
 </html>
