SEO Added booking.com links

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div class="col-md-12 column">
 			<div class="jumbotron">
 				<h1>
-					New Year Countdown
+					New Year Countdown Clock
 				</h1>
 				<p>
 					Time until the year 2015 starts at your place.
@@ -55,19 +55,19 @@
 <!--	<div class="row clearfix">
 		<div class="col-md-4 column">
 			<h2>
-				Tokyo
+				<a href="http://www.booking.com/city/jp/tokyo.html?aid=327321;label=Berlin" title="Countdown in Tokyo">Tokyo</a>
 			</h2>
 			<div class="small-clock clock-1" style="margin:2em;"></div>
 		</div>
 		<div class="col-md-4 column">
 			<h2>
-				Berlin
+				<a href="http://www.booking.com/city/de/berlin.html?aid=327321" title="Silvestercountdown in Berlin">Berlin</a>
 			</h2>
 			<div class="small-clock clock-2" style="margin:2em;"></div>
 		</div>
 		<div class="col-md-4 column">
 			<h2>
-				Los Angeles
+				<a href="http://www.booking.com/city/us/los-angeles.html?aid=327321;label=Berlin" title="New year countdown in Los Angeles">Los Angeles</a>
 			</h2>
 			<div class="small-clock clock-3" style="margin:2em;"></div>
 		</div>
