Added booking.com links Added Facebook markup

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <meta name="description" content="New Year Countdown 2015">
   <meta name="author" content="">
 
+	<meta property="og:title" content="New Year Countdown 2015 Clock"/>
+	<meta property="og:type" content="cause"/>
+	<meta property="og:url" content="http://new-year.mobi/"/>
+	<meta property="og:image" content="http://new-year.mobi/silvestercountdown.jpg"/>
+	<meta property="og:site_name" content="New Year Countdown"/>
+	<meta property="og:description" content="Do not miss the start of 2015! Countdown til midnight. Check this backward counting clock."/>
+
 	<!--link rel="stylesheet/less" href="less/bootstrap.less" type="text/css" /-->
 	<!--link rel="stylesheet/less" href="less/responsive.less" type="text/css" /-->
 	<!--script src="js/less-1.3.3.min.js"></script-->
@@ -52,26 +59,32 @@
 			<div class="clock" style="margin:2em;"></div>
 		</div>
 	</div>
-<!--	<div class="row clearfix">
-		<div class="col-md-4 column">
+	<div class="row clearfix">
+		<div class="col-md-3 column">
 			<h2>
-				<a href="http://www.booking.com/city/jp/tokyo.html?aid=327321;label=Berlin" title="Countdown in Tokyo">Tokyo</a>
+				<a href="http://www.booking.com/city/jp/tokyo.html?aid=327321;label=Berlin" title="Countdown in Tokyo" class="textlike">Tokyo</a>
 			</h2>
 			<div class="small-clock clock-1" style="margin:2em;"></div>
 		</div>
-		<div class="col-md-4 column">
+		<div class="col-md-3 column">
 			<h2>
-				<a href="http://www.booking.com/city/de/berlin.html?aid=327321" title="Silvestercountdown in Berlin">Berlin</a>
+				<a href="http://www.booking.com/city/de/berlin.html?aid=327321" title="Silvestercountdown in Berlin" class="textlike">Berlin</a>
 			</h2>
 			<div class="small-clock clock-2" style="margin:2em;"></div>
 		</div>
-		<div class="col-md-4 column">
+		<div class="col-md-3 column">
 			<h2>
-				<a href="http://www.booking.com/city/us/los-angeles.html?aid=327321;label=Berlin" title="New year countdown in Los Angeles">Los Angeles</a>
+				<a href="http://www.booking.com/city/us/new-york.html?aid=327321" title="New Year Countdown in New York" class="textlike">New York</a>
 			</h2>
 			<div class="small-clock clock-3" style="margin:2em;"></div>
 		</div>
-	</div>-->
+		<div class="col-md-3 column">
+			<h2>
+				<a href="http://www.booking.com/city/us/los-angeles.html?aid=327321;label=Berlin" title="New year countdown in Los Angeles" class="textlike">Los Angeles</a>
+			</h2>
+			<div class="small-clock clock-3" style="margin:2em;"></div>
+		</div>
+	</div>
 </div>
 <script src="js/flipclock.min.js"></script>
 <script type="text/javascript">
