Fixed link to image in FB markup

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta property="og:title" content="New Year Countdown 2015 Clock"/>
 	<meta property="og:type" content="cause"/>
 	<meta property="og:url" content="http://new-year.mobi/"/>
-	<meta property="og:image" content="http://new-year.mobi/silvestercountdown.jpg"/>
+	<meta property="og:image" content="http://new-year.mobi/img/new-year-countdown-2014-2015.jpg"/>
 	<meta property="og:site_name" content="New Year Countdown"/>
 	<meta property="og:description" content="Do not miss the start of 2015! Countdown til midnight. Check this backward counting clock."/>
 
